css/blog.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html, button, input, select, textarea,
.pure-g [class *= "pure-u"] {
   font-family: 'Open Sans', sans-serif;
}

/* BASE */
body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1.02em;
   font-weight: lighter;
   line-height: 1.55em;
   color: #333333;
}

h1,h2,h3,h4,h5,h6 {
   font-weight: normal;
   text-rendering: optimizelegibility;
}

h1 {
   line-height: 1.5em;
}

h2 {
   line-height: 1.2em;
}

a {
   cursor: hand;
   text-decoration: none;
   color: rgb(61, 146, 201);
}

a:link, a:visited {
   color: #0084B4;
   text-decoration: none;
}

a:hover, a:focus {
   text-decoration: none;
}

/* HOME CSS */
a.home-title-link:link, a.home-title-link:visited {
   color: #333;
}

a.home-title-link:hover {
   color: #0084B4;
   text-decoration: none;
}

h1.home-title, h2.home-title, h3.home-title, h4.home-title, h1.post-title-link {
   margin-bottom: 0.2em;
}

.home-date, .post-date {
   color: #888;
   font-size: 90%;
}

.home-image {
    margin: 0.7em 0 1.6em 0;
    height: 240px;
    overflow: hidden;
    position: relative;
    border: 1px;
}

.home-image img {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.crop img {
}

/* POST CSS */
.post {
}

.post-title {
   font-size: 90%;
}

/* ARCHIVE CSS */
h1.archive-year {
   text-align: center;
}

/* LAYOUT */
#wrapper {
   margin: 0 auto;
}

.sidebar {
}

.content {
   margin: 0.8em;
}

.header {
   text-align: center;
   top: auto;
   margin-top: 2em;
}

.pure-img-responsive {
   max-width: 100%;
   height: auto;
}

.nav-list {
   margin: 0;
   padding: 0;
   list-style: none;
}

.nav-item {
   display: inline-block;
   *display: inline;
   zoom: 1;
}

.nav-item a {
   background: transparent;
   border: 2px solid rgb(176, 202, 219);
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   letter-spacing: 0.05em;
   text-transform: uppercase;
   font-size: 85%;
}

.nav-item a:hover, .nav-item a:focus {
   border: 2px solid rgb(61, 146, 201);
   text-decoration: none;
}

.footer {
   margin-top: 2em;
   text-align: center;
}

.footer a {
   color: #aaa;
}

.footer .pure-menu a:hover, .footer .pure-menu a:focus {
   background: none;
}

.footer .pure-menu-link {
   font-size: 0.9em;
}

/* COMPONENTS */
img.center {
   display: block;
   margin-left: auto;
   margin-right: auto;
}

.pure-button {
   width: 7em;
}

/***** CUSTOM *****/
.profile-pic {
   height: 115px;
   width: 115px;
   border: 0;
   border-radius: 10px;
}

.brand-title, .brand-tagline {
   margin: 0;
}

.brand-title {
   font-size: 2.2em;
}

.hr-post {
   //border-top: 1px dashed #E6E6E6;
   border-top: 1px dashed #999999;
}

blockquote {
   font-family: courier;
   border-left: 3px solid #ccc;
   padding-left: 10px;
   margin-left: 10px;
   margin-right: 0px;
   font-size: 14px;
   overflow: auto;
}

pre {
   font-family: courier;
   font-size: 13px;
}

/* RESPONSIVE -- RULES greater 48em */
@media (min-width: 48em) {
   #wrapper {
      max-width: 47em; /* wrapper = sidebar + content */
   }

   .sidebar {
      position: fixed;
      max-width: 9em; /* wrapper = sidebar + content */
      top: 0;
      bottom: 0;
   }

   .content {
      max-width: 38em; /* wrapper = sidebar + content */
      margin-left: 10em;
   }

   h3.home-title {
      font-size: 1.5em;
   }
}

/* RESPONSIVE -- RULES less than 48em */
@media (max-width: 48em) {
   #wrapper {
   }

   .sidebar {
      max-width: 100%;
   }

   .header {
      margin-top: 1.0em;
   }

   .content {
      max-width: 100%;
      margin-top: 0;
   }

   body {
      font-size: 0.94em;
   }

   h1, h2, h3 {
      font-weight: bold;
   }

   h1 {
      font-size: 1.5em;
   }

   h2 {
      font-size: 1.3em;
   }

   h3 {
      font-size: 1.1em;
   }
}

